[package]
name = "nipahblocks_api"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = { version = "2.0.1", features = ["serde"] }
chrono = { version = "0.4.42", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
tungstenite = { version = "0.28.0", default-features = false }
