[package]
name = "nipahblocks_server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
env_logger = "0.11.8"
futures-util = "0.3.31"
log = "0.4.28"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "sync"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tokio-tungstenite = "0.28.0"
nipahblocks_api = { workspace = true }
noise = "0.9.0"
